# demorobot

./: LICENSE  README.md
HYDRO/: README.md  main.c
HYDRO-REMOTE ESP test/: (HYDRO)main.c  (REMOTE)main.c  README.md
Libraries/: stm32f10x_conf.h
REMOTE/: README.md  main.c
REMOTE/inc/: lcd16x2.h
first_project/: CMakeLists.txt  core.c  core.h  first_project.dep  first_project.ewd  first_project.ewp  first_project.ewt  forst_project.eww  logic.c  logic.h  main.c  test.c
first_project/Debug/Exe/: first_project.out  first_project.sim  first_project.srec
first_project/Debug/List/: first_project.map
first_project/arduino/master/: master.ino
first_project/doc/: states.puml
first_project/settings/: first_project.Debug.cspy.bat  first_project.Debug.cspy.ps1  first_project.Debug.general.xcl  first_project.dbgdt  first_project.dnx  forst_project.wsdt
stm32/Libraries/: stm32f10x_conf.h  stm32f10x_conf.h.txt
stm32/first_project/: first_project.dep  first_project.ewd  first_project.ewp  first_project.ewt  forst_project.eww  main.c
stm32/first_project/Debug/Exe/: first_project.out  first_project.sim  (+1 more)
stm32/first_project/settings/: first_project.Debug.cspy.bat  first_project.Debug.cspy.ps1  first_project.Debug.general.xcl  first_project.dbgdt  first_project.dnx  forst_project.wsdt
stm32/test/: CMakeLists.txt  logic.c  logic.h  main  main.c  mass  mass.c
testcode/HYDRO-REMOTE ESP test/ESP/: Reciver.ino  Transmitter.ino
testcode/REMOTE/ESP8266 WEMOS/: Reciver.ino  Transmitter.ino
testcode/REMOTE/inc/: stm32f10x_it.h
testcode/REMOTE/src/: stm32f10x_it.c
(+1 files in other folders)
